--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     build: .
     container_name: wa-logger
     restart: unless-stopped
+    init: true
+    stop_grace_period: 2m # Allow up to 2 minutes for graceful shutdown
     volumes:
       - ./auth_data:/usr/src/app/.wwebjs_auth
       - ./logs:/usr/src/app/logs
